Fix logo spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@ a {
 }
 
 .links {
-	margin-bottom: 2em;
+	margin-bottom: 1em;
 }
 
 .navbar .container-fluid .navbar-header {
