--- a/app/assets/stylesheets/foods.scss
+++ b/app/assets/stylesheets/foods.scss
@@ -8,7 +8,7 @@ $primary-color: #2c3e52;
 	color: #5c3246;
 }
 
-.field {
+.sort_by_dropdown {
 	margin-top: 1em;
 	height: 3em;
 	position: relative;
