--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -93,7 +93,7 @@ $primary-color: #2c3e52;
 			color: #e9ebed;
 			width: 200px;
 			margin-top: 1em;
-			margin-bottom: 5em;
+			margin-bottom: 1em;
 		}
 	}
 }
